--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "framer-motion": "^10.16.4",
     "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^2.12.0"
   },
   "devDependencies": {
     "autoprefixer": "^10",
