--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "framer-motion": "^10.16.4",
     "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18",
-    "react-tsparticles": "^2.12.2",
-    "tsparticles": "^2.12.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "autoprefixer": "^10",
