--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "framer-motion": "^10.16.4",
+    "hamburger-react": "^2.5.0",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18"
