--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "@emailjs/browser": "^3.11.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@react-three/drei": "^9.88.2",
+    "@react-three/fiber": "^8.14.5",
+    "@react-three/postprocessing": "^2.15.1",
     "framer-motion": "^10.16.4",
+    "framer-motion-3d": "^10.16.4",
     "hamburger-react": "^2.5.0",
     "next": "13.5.4",
     "react": "^18",
